login backend + messages
