# backend/src/app.js
@@ -8,6 +8,7 @@ const OpenApiValidator = require('express-openapi-validator');
 
 const dummy = require('./dummy');
 const users = require('./users');
+const messages = require('./messages');
 
 const app = express();
 app.use(cors());
@@ -29,6 +30,7 @@ app.use(
 
 app.get('/v0/dummy', dummy.get);
 app.get('/v0/users', users.login);
+app.post('/v0/messages', messages.sendNew);
 // Your routes go here
 
 app.use((err, req, res, next) => {
